fix: issue send response b ack to line